--- a/mobile-app-development-services.html
+++ b/mobile-app-development-services.html
@@ -449,7 +449,7 @@
 
                             </div>
 
-                            <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
+                            <!-- <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
 
                                 <div class="sidebar__title">
                                     <h5>Download Brochure:</h5>
@@ -461,7 +461,7 @@
                                         href="javascript:void(0)">Download DOC<i class="icofont-file-document"></i></a>
                                 </div>
 
-                            </div>
+                            </div> -->
                             <!-- contact form -->
                             <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
                                 <div class="service__details__planning__heading">
@@ -559,19 +559,22 @@
                                     Your browser does not support the video tag.
                                 </video>
                             </div> -->
-                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h2>Data Management & Analytics </h2>
-                            </div>
 
-                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Our data management and analytics services improve and analyze the potential of
-                                    data
-                                    for a business. Ranging from data warehousing to predictive analytics, Digital
-                                    Minds
-                                    On provide all-encompassing data solutions for efficient and excellent
-                                    decisions,
-                                    strategy formulation and about customers.</p>
-                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h2>Data Management & Analytics </h2>
+                        </div>
+
+                        <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p>Our data management and analytics services improve and analyze the potential of
+                                data
+                                for a business. Ranging from data warehousing to predictive analytics, Digital
+                                Minds
+                                On provide all-encompassing data solutions for efficient and excellent
+                                decisions,
+                                strategy formulation and about customers.</p>
                         </div>
                     </div>
                 </div>
