--- a/software-development-services.html
+++ b/software-development-services.html
@@ -446,7 +446,7 @@
                                 </div>
 
                             </div>
-                            <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
+                            <!-- <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
 
                                 <div class="sidebar__title">
                                     <h5>Download Brochure:</h5>
@@ -459,18 +459,19 @@
                                             class="icofont-file-document"></i></a>
                                 </div>
 
-                            </div>
-                                <!-- contact form -->
-                                <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
-                                    <div class="service__details__planning__heading">
-                                        <h6>Let's discuss your project with us</h6>
-                                        <p>Send us a message or schedule a meeting on WhatsApp below, and let's take the
-                                            first step toward creating your product.</p>
-                                        <a class="default__button" href="contact">CONTACT US</a>
-                                    </div>
+                            </div> -->
+                            
+                            <!-- contact form -->
+                            <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
+                                <div class="service__details__planning__heading">
+                                    <h6>Let's discuss your project with us</h6>
+                                    <p>Send us a message or schedule a meeting on WhatsApp below, and let's take the
+                                        first step toward creating your product.</p>
+                                    <a class="default__button" href="contact">CONTACT US</a>
                                 </div>
-                                <!-- contact form -->
-                          
+                            </div>
+                            <!-- contact form -->
+
 
 
                         </div>
@@ -554,36 +555,40 @@
                                     enterprise applications for resource planning, data management, and customers
                                     relations management.</p>
                             </div>
-                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h3>Software Integration Services</h3>
-                            </div>
-                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
 
-                                <p>Implementation of new solutions in an organization may often come with challenges of
-                                    how to make the new solutions fit the current existing systems. With software
-                                    development consulting services we can avoid as much disruption during integration
-                                    as is humanly possible.</p>
-                            </div>
-                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h3>Offshore and Outsourced Development</h3>
-                            </div>
-                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h3>Software Integration Services</h3>
+                        </div>
+                        <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
 
-                                <p>We provide dependable offshore software development services and outsourcing software
-                                    development services; this enables organizations to enjoy the finest talents in the
-                                    field with minimal expenditures. A multinational team of professionals guarantees
-                                    the best result in any country.</p>
-                            </div>
-                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h3>Cloud-Based Solutions</h3>
-                            </div>
-                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p>Implementation of new solutions in an organization may often come with challenges of
+                                how to make the new solutions fit the current existing systems. With software
+                                development consulting services we can avoid as much disruption during integration
+                                as is humanly possible.</p>
+                        </div>
+                        <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h3>Offshore and Outsourced Development</h3>
+                        </div>
+                        <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
 
-                                <p>Cloud solutions are inevitable when it comes to digital transformation. Among our
-                                    software development services, cloud based platforms that make the solutions more
-                                    versatile in term of scalability to cater for changing demands.</p>
-                            </div>
+                            <p>We provide dependable offshore software development services and outsourcing software
+                                development services; this enables organizations to enjoy the finest talents in the
+                                field with minimal expenditures. A multinational team of professionals guarantees
+                                the best result in any country.</p>
+                        </div>
+                        <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h3>Cloud-Based Solutions</h3>
+                        </div>
+                        <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
 
+                            <p>Cloud solutions are inevitable when it comes to digital transformation. Among our
+                                software development services, cloud based platforms that make the solutions more
+                                versatile in term of scalability to cater for changing demands.</p>
                         </div>
                     </div>
                 </div>
