--- a/web-development-services.html
+++ b/web-development-services.html
@@ -448,7 +448,7 @@
                             </div>
 
 
-                            <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
+                            <!-- <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
 
                                 <div class="sidebar__title">
                                     <h5>Download Brochure:</h5>
@@ -460,7 +460,7 @@
                                         href="javascript:void(0)">Download DOC<i class="icofont-file-document"></i></a>
                                 </div>
 
-                            </div>
+                            </div> -->
 
 
 
@@ -580,32 +580,33 @@
 
 
                         </div>
-                        <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
-                            <div class="row">
+                  
+                    </div>
+                </div>
+                <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
+                    <div class="row">
 
-                                <div class="col-md-12">
-                                    <div class="service__details__planning__inner">
-                                        <div class="service__details__planning__heading">
-                                            <h6>Custom Web Development Services</h6>
-                                        </div>
-                                        <div class="service__details__planning__text">
-                                            <p>Digital Minds On is a web design & development services provider
-                                                company that mainly specializes in providing fully customized
-                                                personal websites for your business. Our systematic approach
-                                                includes:</p>
-                                            <p> <b>Comprehensive Needs Analysis:</b> We go further in detail in
-                                                developing
-                                                background information about your products/ services, target audience,
-                                                Internet
-                                                objectives, achievements, and measures of performance.</p>
-                                        </div>
-                                    </div>
+                        <div class="col-md-12">
+                            <div class="service__details__planning__inner">
+                                <div class="service__details__planning__heading">
+                                    <h6>Custom Web Development Services</h6>
+                                </div>
+                                <div class="service__details__planning__text">
+                                    <p>Digital Minds On is a web design & development services provider
+                                        company that mainly specializes in providing fully customized
+                                        personal websites for your business. Our systematic approach
+                                        includes:</p>
+                                    <p> <b>Comprehensive Needs Analysis:</b> We go further in detail in
+                                        developing
+                                        background information about your products/ services, target audience,
+                                        Internet
+                                        objectives, achievements, and measures of performance.</p>
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
+
                 <div class="row g-4 horizontal-card">
                     <div class="col-md-6">
                         <div class="card mb-3">
