--- a/game-development-services.html
+++ b/game-development-services.html
@@ -443,7 +443,7 @@
 
                             </div>
 
-                            <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
+                            <!-- <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
 
                                 <div class="sidebar__title">
                                     <h5>Download Brochure:</h5>
@@ -456,7 +456,7 @@
                                             class="icofont-file-document"></i></a>
                                 </div>
 
-                            </div>
+                            </div> -->
 
 
 
@@ -537,23 +537,28 @@
                                     engaging gameplay that consumers are keen to engage in, and that improves their
                                     gaming experience.</p>
                             </div>
-                            <div class="service__details__planning__heading">
-                                <h6>Mobile Game Development:</h6>
-                            </div>
-                            <div class="service__details__planning__text">
-                                <p>We also provide cross-platform game development so your game runs optimally on any
-                                    operating system Android or iOS.</p>
-                            </div>
-                            <p> As for game development, we always take into consideration that each project is as
-                                individual as you are. Here are some reasons to choose Digital Minds On for your
-                                next game development project:<br><br>
 
-                                <b>Experienced Platinum Games Developers:</b> These must be top-notch video game
-                                developers as our team is made up of some of the best in the video game development
-                                industry with experience of many years in different fields of game development such
-                                as players, multiplayer, and online game players.<br><br>
-                            </p>
                         </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="service__details__planning__heading">
+                            <h6>Mobile Game Development:</h6>
+                        </div>
+                        <div class="service__details__planning__text">
+                            <p>We also provide cross-platform game development so your game runs optimally on any
+                                operating system Android or iOS.</p>
+                        </div>
+                        <p> As for game development, we always take into consideration that each project is as
+                            individual as you are. Here are some reasons to choose Digital Minds On for your
+                            next game development project:<br><br>
+
+                            <b>Experienced Platinum Games Developers:</b> These must be top-notch video game
+                            developers as our team is made up of some of the best in the video game development
+                            industry with experience of many years in different fields of game development such
+                            as players, multiplayer, and online game players.<br><br>
+                        </p>
                     </div>
                 </div>
                 <div class="row g-4 horizontal-card">
