--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -445,7 +445,7 @@
                                 </div>
 
                             </div>
-                            <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
+                            <!-- <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
 
                                 <div class="sidebar__title">
                                     <h5>Download Brochure:</h5>
@@ -458,10 +458,7 @@
                                             class="icofont-file-document"></i></a>
                                 </div>
 
-                            </div>
-
-
-
+                            </div> -->
                         </div>
                         <!-- contact form -->
                         <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
@@ -544,27 +541,30 @@
 
                                     </div>
 
-                                    <div class="col-md-12 mt-3">
-                                        <div class="service__details__planning__heading">
-                                            <h2>Boost Engagement Through Expert Social Media Marketing Strategies</h2>
-                                        </div>
-                                        <p>It’s time to elevate the way you engage with your customers. In a rapidly
-                                            changing landscape, potential customers can quickly turn to competitors if
-                                            their needs aren’t met. To stay ahead, it’s essential to implement
-                                            strategies that not only retain your existing customers but also keep them
-                                            actively engaged. By maintaining a professional tone and delivering
-                                            meaningful interactions, you can build stronger connections and boost
-                                            loyalty. Trust our social media experts to manage your digital marketing
-                                            needs, helping your brand grow and expanding your customer base effectively.
-                                        </p>
 
-
-                                    </div>
                                 </div>
                             </div>
 
 
                         </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 mt-3">
+                        <div class="service__details__planning__heading">
+                            <h2>Boost Engagement Through Expert Social Media Marketing Strategies</h2>
+                        </div>
+                        <p>It’s time to elevate the way you engage with your customers. In a rapidly
+                            changing landscape, potential customers can quickly turn to competitors if
+                            their needs aren’t met. To stay ahead, it’s essential to implement
+                            strategies that not only retain your existing customers but also keep them
+                            actively engaged. By maintaining a professional tone and delivering
+                            meaningful interactions, you can build stronger connections and boost
+                            loyalty. Trust our social media experts to manage your digital marketing
+                            needs, helping your brand grow and expanding your customer base effectively.
+                        </p>
+
+
                     </div>
                 </div>
                 <div class="row g-4 horizontal-card" style="padding-top: 40px !important;">
