--- a/mobile-app-development-services.html
+++ b/mobile-app-development-services.html
@@ -562,6 +562,8 @@
 
                         </div>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col-md-12">
                         <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
                             <h2>Data Management & Analytics </h2>
