fixed in service page

--- a/network-services.html
+++ b/network-services.html
@@ -454,7 +454,7 @@
                                 </div>
 
                             </div>
-                            <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
+                            <!-- <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
 
                                 <div class="sidebar__title">
                                     <h5>Download Brochure:</h5>
@@ -467,7 +467,7 @@
                                             class="icofont-file-document"></i></a>
                                 </div>
 
-                            </div>
+                            </div> -->
                         </div>
                         <!-- contact form -->
                         <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
@@ -549,28 +549,33 @@
                                     resources among users are part of the work that comes under system administration.
                                 </p>
                             </div>
-                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h2>Cybersecurity</h2>
-                            </div>
-                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>In the modern world where data hacking and cyber-attacks are increasingly common,
-                                    security is highly valued. Its specialists must take on the role of ensuring that an
-                                    organization secures its information and its networks. This involves putting into
-                                    practice firewalls conducting security scans and monitoring of any illegitimate
-                                    activities. </p>
-                            </div>
 
-                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h2>Software Installation and Configuration</h2>
-                            </div>
-                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Another key role of IT experts is to install and configure the software. The system
-                                    administrator guarantees that appropriate applications set up properly are updated
-                                    at regular intervals and are included in the organizational structure. They can also
-                                    assist employees in how effectively to adopt new software and how to fit the current
-                                    systems and processes. The efficient use of the software employed is important to
-                                    keep productivity up across the organizational departments.</p>
-                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h2>Cybersecurity</h2>
+                        </div>
+                        <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p>In the modern world where data hacking and cyber-attacks are increasingly common,
+                                security is highly valued. Its specialists must take on the role of ensuring that an
+                                organization secures its information and its networks. This involves putting into
+                                practice firewalls conducting security scans and monitoring of any illegitimate
+                                activities. </p>
+                        </div>
+
+                        <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h2>Software Installation and Configuration</h2>
+                        </div>
+                        <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p>Another key role of IT experts is to install and configure the software. The system
+                                administrator guarantees that appropriate applications set up properly are updated
+                                at regular intervals and are included in the organizational structure. They can also
+                                assist employees in how effectively to adopt new software and how to fit the current
+                                systems and processes. The efficient use of the software employed is important to
+                                keep productivity up across the organizational departments.</p>
                         </div>
                     </div>
                 </div>
