--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -446,7 +446,7 @@
                             </div>
 
 
-                            <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
+                            <!-- <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
 
                                 <div class="sidebar__title">
                                     <h5>Download Brochure:</h5>
@@ -458,7 +458,7 @@
                                         href="javascript:void(0)">Download DOC<i class="icofont-file-document"></i></a>
                                 </div>
 
-                            </div>
+                            </div> -->
 
 
 
@@ -544,17 +544,22 @@
                                     desired and takes place before arriving at the last design.
                                 </p>
                             </div>
-                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h2>Usability Testing & Iteration</h2>
-                            </div>
-                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Digital Minds On, a UI/UX design agency overemphasizes the importance of testing when
-                                    carrying out designs. To determine the usability of the product, its utility and
-                                    efficiency, as well as how much the user enjoys it, we undergo usability tests.</p>
-                                <p>We modify the design with a view of meeting all the users’ needs and expectations
-                                    before actually deploying the design.</p>
-                            </div>
+                           
 
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h2>Usability Testing & Iteration</h2>
+                        </div>
+                        <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p>Digital Minds On, a UI/UX design agency overemphasizes the importance of testing when
+                                carrying out designs. To determine the usability of the product, its utility and
+                                efficiency, as well as how much the user enjoys it, we undergo usability tests.</p>
+                            <p>We modify the design with a view of meeting all the users’ needs and expectations
+                                before actually deploying the design.</p>
                         </div>
                     </div>
                 </div>
