--- a/wordpress-development-services.html
+++ b/wordpress-development-services.html
@@ -447,7 +447,7 @@
 
                             </div>
 
-                            <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
+                            <!-- <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
 
                                 <div class="sidebar__title">
                                     <h5>Download Brochure:</h5>
@@ -460,7 +460,7 @@
                                             class="icofont-file-document"></i></a>
                                 </div>
 
-                            </div>
+                            </div> -->
                             <!-- contact form -->
                             <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
                                 <div class="service__details__planning__heading">
@@ -546,22 +546,27 @@
                                     would run efficiently on all devices. </p>
                             </div>
 
-                            <div class="service__details__planning__heading">
-                                <h3>Scalability</h3>
-                            </div>
-                            <div class="service__details__planning__text">
-                                <p>With growth in the business, WordPress proves an ideal choice because it can support
-                                    the change that your website demands. </p>
-                            </div>
 
-                            <div class="service__details__planning__heading">
-                                <h3>All-in-One WordPress Development Services</h3>
-                            </div>
-                            <div class="service__details__planning__text">
-                                <p>We know that each business is different and individual, so we provide a full range of
-                                    WordPress development services. We engage our WordPress web developers to
-                                    collaborate with you to provide solutions unique to your company.</p>
-                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12" style="margin-top: 30px;">
+                        <div class="service__details__planning__heading">
+                            <h3>Scalability</h3>
+                        </div>
+                        <div class="service__details__planning__text">
+                            <p>With growth in the business, WordPress proves an ideal choice because it can support
+                                the change that your website demands. </p>
+                        </div>
+
+                        <div class="service__details__planning__heading">
+                            <h3>All-in-One WordPress Development Services</h3>
+                        </div>
+                        <div class="service__details__planning__text">
+                            <p>We know that each business is different and individual, so we provide a full range of
+                                WordPress development services. We engage our WordPress web developers to
+                                collaborate with you to provide solutions unique to your company.</p>
                         </div>
                     </div>
                 </div>
