--- a/content-creater.html
+++ b/content-creater.html
@@ -443,7 +443,7 @@
                             </div>
 
 
-                            <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
+                            <!-- <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
 
                                 <div class="sidebar__title">
                                     <h5>Download Brochure:</h5>
@@ -455,7 +455,7 @@
                                         href="javascript:void(0)">Download DOC<i class="icofont-file-document"></i></a>
                                 </div>
 
-                            </div>
+                            </div> -->
 
 
 
@@ -470,6 +470,16 @@
                             </div>
                         </div>
                         <!-- contact form -->
+                        <!-- video -->
+                        <div class="breadcrumbarea-video-small" style="margin-top: 30px;">
+                            <div class="breadcrumbarea__overlay-video">
+                                <video class="breadcrumbarea__video__element" autoplay="" muted="" loop="">
+                                    <source src="assets/img/service/soft.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
+                        </div>
+
                     </div>
                     <div class="col-xl-8 col-lg-8 col-md-12 col-12">
                         <div class="service__details__wraper">
@@ -546,31 +556,9 @@
                                 contain valuable thoughts and information that is relevant to your audience.</p>
 
                         </div>
-                        <div class="service__details__planning__text">
-                            <div class="service__details__planning__heading">
-                                <h3>Creative Content Campaigns</h3>
-                            </div>
-                            <p>Any great content must create unique ways of presenting it to the public. Whether your
-                                goal is to launch a product, generate brand recognition or consumer interest, or to
-                                encourage consumption, we come up with and run unique and captivating promotional
-                                strategies and advertisements.</p>
-                        </div>
-                        <div class="service__details__planning__heading mb-4">
-                            <h2>The Digital Minds On Approach</h2>
-                        </div>
+
                         <div class="row">
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                                <!-- video -->
-                                <div class="breadcrumbarea-video-small">
-                                    <div class="breadcrumbarea__overlay-video">
-                                        <video class="breadcrumbarea__video__element" autoplay="" muted="" loop="">
-                                            <source src="assets/img/service/soft.mp4" type="video/mp4">
-                                            Your browser does not support the video tag.
-                                        </video>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                                 <div class="service__details__planning__text">
                                     <div class="service__details__planning__heading">
                                         <h3>Understanding Your Vision</h3>
@@ -592,6 +580,18 @@
                                         content
                                         is in line with the brand you wish to convey and communicates this clearly.</p>
                                 </div>
+                                <div class="service__details__planning__text">
+                                    <div class="service__details__planning__heading">
+                                        <h3>Creative Content Campaigns</h3>
+                                    </div>
+                                    <p>Any great content must create unique ways of presenting it to the public. Whether
+                                        your
+                                        goal is to launch a product, generate brand recognition or consumer interest, or
+                                        to
+                                        encourage consumption, we come up with and run unique and captivating
+                                        promotional
+                                        strategies and advertisements.</p>
+                                </div>
                             </div>
                         </div>
 
@@ -599,7 +599,6 @@
                     </div>
 
                 </div>
-
                 <div class="row g-4 horizontal-card">
                     <div class="col-md-6">
                         <div class="card mb-3">
@@ -715,7 +714,9 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-
+                        <div class="service__details__planning__heading mb-4">
+                            <h2>The Digital Minds On Approach</h2>
+                        </div>
                         <div class="service__details__planning__text">
                             <div class="service__details__planning__heading">
                                 <h3>Focus on Quality</h3>
